--- a/app/views/lists/index.html.haml
+++ b/app/views/lists/index.html.haml
@@ -2,11 +2,13 @@
 %h1.collections Research Collections
 %h4.collections Collections of great papers addressing questions in development economics
 = form_tag lists_path, method: :get, class: "tag-form" do
-  Choose some tags to find what you're looking for ---
-  - @tags.each do |tag|
-    = check_box_tag("tags[]", tag.id, @checked_tags[tag.id], class: "tag_checkbox")
-    %span.checkboxtext= tag.name
-  / # = submit_tag "Filter", class: "submit"
+  Choose some tags to find what you're looking for
+  %ul.tag-list
+    - @tags.each do |tag|
+      %li
+        = check_box_tag("tags[]", tag.id, @checked_tags[tag.id], class: "tag_checkbox")
+        %span.checkboxtext= tag.name
+    / # = submit_tag "Filter", class: "submit"
 .row
   / .col-md-2#globe.hidden-sm.hidden-xs
   /   GPS
