Add basic item#show page

--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -39,6 +39,12 @@ li {
 	list-style: square inside;
 }
 
+.read span {
+	background: blue;
+	color: white;
+	padding: 10px;
+}
+
 .alert {
 	color: #333333;
 	border: 1px solid #333333;
