--- a/app/views/lists/show.html.haml
+++ b/app/views/lists/show.html.haml
@@ -14,7 +14,8 @@
             = @list.description
         .row
           .col-xs-12.views
-            = "Created #{time_ago_in_words(@list.created_at)} ago, Viewed #{@list.view_count} times" 
+            = "Created #{time_ago_in_words(@list.created_at)} ago"
+            = @list.get_view_count 
         .row
           .col-xs-12#missing-content
             - if @items.count < 1
