Change the tagline in the header from 'syllabus' to 'handbook'

--- a/app/views/layouts/_header.html.haml
+++ b/app/views/layouts/_header.html.haml
@@ -7,6 +7,6 @@
           %span#globe GPS
     %ul
       %li.slogan
-        The Internet's syllabus for Development Economics
+        The up-to-date handbook for development economists
 
 
