Slight change to lists#show

--- a/app/views/lists/show.html.haml
+++ b/app/views/lists/show.html.haml
@@ -7,7 +7,7 @@
           .col-xs-12.title
             %h4= "#{@list.title}"
             %h5.curator
-              By 
+              Contributors:
               =link_to @list.curator, @list.curator_url
         .row
           .col-xs-12.description
