--- a/app/views/layouts/_header.html.haml
+++ b/app/views/layouts/_header.html.haml
@@ -5,8 +5,7 @@
         =link_to root_path do 
           Research
           %span#globe GPS
-    %ul
-      %li.slogan
-        The up-to-date handbook for development economists
+    .text-right.slogan
+      The up-to-date handbook for development economists
 
 
