--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -17,9 +17,9 @@
     = render 'layouts/header'
     / # = debug(params) if Rails.env.development?
     #wrapper
-      = render 'layouts/sidenav'
+      / # = render 'layouts/sidenav'
       #page-content-wrapper
-        .container-fixed
+        .container
           - flash.each do |key, value|
             = content_tag(:div, value.to_s, class: "alert alert-#{key}")
           = yield
