--- a/app/views/lists/_list.html.haml
+++ b/app/views/lists/_list.html.haml
@@ -1,14 +1,15 @@
-.col-xs-4.feed-item
-  %h5
-    =link_to list.title, list_path(list)
-  %ul.list-info
-    %li.paper-count
-      = pluralize(list.items.count, 'paper')
-    - list.tags.each do |tag|
-      %li.tag-item= tag.name
-    %li.pull-right.curated-by
-      Created by
-      = link_to list.curator, list.curator_url
-      = time_ago_in_words(list.created_at)
-      ago.
+%li.feed-item
+  .row
+    .col-xs-8.basic-info
+      %h5=link_to list.title, list_path(list), class: "title"
+      %span.timestamp.gray= "updated #{time_ago_in_words(list.created_at)} ago;"
+      %span.item-count.gray=pluralize(list.items.count, 'paper')
+      - list.tags.each do |tag|
+        %span.tag= tag.name
+    .col-xs-4.social-info.text-right
+      =link_to list.curator_url do
+        / # = image_tag "photo.jpg", class: "photo"
+        .gray= "Edited by #{list.curator}"
 
+      / =image_tag "photo.jpg", class: "photo"
+      / =link_to "#{list.curator}", list.curator_url
