Add more design improvements

--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -24,7 +24,7 @@
             = content_tag(:div, value.to_s, class: "alert alert-#{key}")
           = yield
 
-  .footer 
-    .container-fluid
-      .pull-right
-        Research GPS 2015
+  / .footer 
+  /   .container-fluid
+  /     .pull-right
+  /       Research GPS 2015
