--- a/app/views/lists/_list.html.haml
+++ b/app/views/lists/_list.html.haml
@@ -7,9 +7,11 @@
       - list.tags.each do |tag|
         %span.tag= tag.name
     .col-xs-4.social-info.text-right
-      =link_to list.curator_url do
-        / # = image_tag "photo.jpg", class: "photo"
-        .gray= "Edited by #{list.curator}"
+      - if list.curator != (nil || '')
+        =link_to list.curator_url do
+          / # = image_tag "photo.jpg", class: "photo"
+          %span.gray Edited by 
+          %span= link_to "#{list.curator}", list.curator_url
 
       / =image_tag "photo.jpg", class: "photo"
       / =link_to "#{list.curator}", list.curator_url
