--- a/app/views/lists/index.html.haml
+++ b/app/views/lists/index.html.haml
@@ -4,7 +4,8 @@
     %ul
       %li
         %h1 Research Questions
-      %li Collections of papers addressing big questions in development economics
+      %li 
+        %h4.gray Collections of papers addressing big questions in development economics
 
 .row.tag-list
   .col-xs-12
