--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -7,8 +7,7 @@ html {
 }
 
 body {
-	padding-top: 90px;
-	line-height: 20px;
+	padding-top: 50px;
 }
 
 h1, h2, h4, h5 {
@@ -33,6 +32,9 @@ a {
 
 .social-info {
 	// text-align: right;
+	a {
+		color: blue;
+	}
 }
 
 .gray {
@@ -43,14 +45,53 @@ a {
 	// margin-right: 100px;
 	li {
 		// float: left;
+		a {
+			color: blue;
+		}
+	}
+}
+
+.list-show {
+	margin-left: 100px;
+	position: relative;
+}
+
+.abstract {
+	font-size: .9em;
+}
+
+.description {
+	background: #c6e4ee;
+	padding-top: 20px;
+	padding-bottom: 20px;
+	font-size: .9em;
+	margin-bottom: 10px;
+}
+
+.basic-info {
+	h5 {
+		font-size: 1.2em;
 	}
 }
 
 .right-sidebar {
-	// border-/ left: 1px solid black;
-	// position: fixed;
+	border-left: 1px solid gray;
+	position: fixed;
 	height: 100%;
 	overflow-y: auto;
+	width: 300px;
+	right: 0px;
+	background: #fcf8e3;
+	padding-top: 30px;
+	padding-left: 20px;
+	padding-right: 20px;
+	padding-bottom: 30px;
+}
+
+#prompt {
+	margin-top: 100px;
+	text-align: center;
+	font-style: italic;
 }
 
 
@@ -97,6 +138,10 @@ a {
     padding-top: 0px;
     // margin-left: 100px;
     // margin-right: 100px;
+}
+
+.main-content {
+	margin-top: 30px;
 }
 
 .italic {
@@ -161,6 +206,11 @@ input[type=checkbox]
 .heading {
 	margin-left: 100px;
 	margin-right: 100px;
+	margin-bottom: 60px;
+	margin-top: 60px;
+	h1 {
+		margin-bottom: 10px;
+	}
 }
 
 .tag {
@@ -217,6 +267,9 @@ input[type=checkbox]
     // #sidebar-wrapper {
     //     width: 250px;
     // }
+    .main-content {
+    	position: relative;
+    }
 
     #page-content-wrapper {
         // padding-left: 30px;
