--- a/app/views/items/_item_content.html.haml
+++ b/app/views/items/_item_content.html.haml
@@ -1,8 +1,9 @@
 .title
   %h4= @item.title
 %br
-%h6.read 
-  %span= link_to "Read Now", @item.url
+= link_to @item.url do 
+  %h6.read
+    %span Read Now
 %br
 %h5 Abstract
-%p= @item.abstract
+%p.abstract= @item.abstract
