--- a/app/views/lists/index.html.haml
+++ b/app/views/lists/index.html.haml
@@ -3,7 +3,7 @@
   .col-xs-12
     %ul
       %li
-        %h1 Research Questions
+        %h1 Development Economics
       %li 
         %h4.gray Collections of papers addressing big questions in development economics
 
