Allow raw html in list#show description

--- a/app/views/lists/show.html.haml
+++ b/app/views/lists/show.html.haml
@@ -21,7 +21,7 @@
 
       .row.content
         .col-xs-12.description
-          = @list.description
+          = raw @list.description
         .col-xs-12.list-wrapper
           = render @items
     .right-sidebar
