Add hyperlinks to list#description and change tagline

--- a/app/views/layouts/_header.html.haml
+++ b/app/views/layouts/_header.html.haml
@@ -6,6 +6,6 @@
           Research
           %span#globe GPS
     .text-right.slogan
-      The up-to-date handbook for development economists
+      The community-curated handbook for development economists
 
 
