--- a/app/views/layouts/_header.html.haml
+++ b/app/views/layouts/_header.html.haml
@@ -6,6 +6,6 @@
           Research
           %span#globe GPS
     .text-right.slogan
-      The PhD-authored handbook for development economics
+      The PhD-curated handbook for development economics
 
 
