--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -64,7 +64,7 @@ a {
 	background: #c6e4ee;
 	padding-top: 20px;
 	padding-bottom: 20px;
-	font-size: .9em;
+	// font-size: .9em;
 	margin-bottom: 10px;
 	a {
 		color: blue;
