--- a/app/views/lists/index.html.haml
+++ b/app/views/lists/index.html.haml
@@ -5,7 +5,7 @@
       %li
         %h1 Development Economics
       %li 
-        %h4.gray Collections of papers addressing big questions in development economics
+        %h4.gray Collections of papers addressing open questions in development economics
 
 .row.tag-list
   .col-xs-12
