Remove notice about only open to mit, yale, harvard

--- a/app/views/lists/show.html.haml
+++ b/app/views/lists/show.html.haml
@@ -21,7 +21,7 @@
             %li.pt10.pb10.attention
               Want to contribute to this page, either by editing the summary or adding papers? Email 
               = mail_to "info@researchgps.com"
-              and we'll be in touch. Editing is open to PhD students at Harvard, Yale, and MIT. 
+              and we'll be in touch. 
 
       .row.content
         .col-xs-12.description
