--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -23,7 +23,7 @@
           - flash.each do |key, value|
             = content_tag(:div, value.to_s, class: "alert alert-#{key}")
           = yield
-
+    = debug(params) if Rails.env.development?
   / .footer 
   /   .container-fluid
   /     .pull-right
