--- a/app/views/lists/index.html.haml
+++ b/app/views/lists/index.html.haml
@@ -1,21 +1,15 @@
-- provide(:title, "Home")
-.row.heading.text-center
-  .col-xs-12
-    %ul
-      %li
-        %h1 Development Economics
-      %li 
-        %h4.gray Frame your thinking around big development questions
 
-.row.tag-list
-  .col-xs-12
-    = form_tag lists_path, method: :get, class: "tag-form" do
-      %ul
-      - @tags.each do |tag|
-        %li
-          = check_box_tag("tags[]", tag.id, @checked_tags[tag.id], class: "checkbox")
-          %span= tag.name
-    / # = submit_tag "Filter", class: "submit"
+
+/ / .row.tag-list
+/   .col-xs-12
+/     = form_tag lists_path, method: :get, class: "tag-form" do
+/       %ul
+/       - @tags.each do |tag|
+/         %li
+/           = check_box_tag("tags[]", tag.id, @checked_tags[tag.id], class: "checkbox")
+/           %span= tag.name
+/     / # = submit_tag "Filter", class: "submit"
+
 .row.feed
   .col-xs-12
     %ul
