--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -39,6 +39,28 @@ a {
 }
 
 
+.banner {
+	height: 200px;
+	background-size: cover;
+	background-position: center;
+	position: relative;
+
+
+}
+
+.banner-info {
+	box-shadow: inset 0 0 10px rgba(0,0,0,0.2);
+	height: inherit;
+	background-color: rgba(0,0,0,0.6);
+	color: white;
+	text-align: center;
+	.name {
+		padding-top: 75px;
+		font-size: 2.3em;
+		font-weight: bold;
+		letter-spacing: 1px;
+	}
+}
 
 .topics {
 	margin-left: 100px;
