--- a/app/views/lists/index.html.haml
+++ b/app/views/lists/index.html.haml
@@ -10,6 +10,11 @@
 /           %span= tag.name
 /     / # = submit_tag "Filter", class: "submit"
 
+.row.banner{style: "background-image: url(#{image_path @tag_image})"}
+  .banner-info
+    .container
+      .name
+        %span=@tag.name
 .row.feed
   .col-xs-12
     %ul
