Add photos to users

--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -197,6 +197,14 @@ a {
 	}
 }
 
+.profile-img {
+	img {
+	border-radius: 100%;
+	width: 50px;
+	height: 50px;
+	}
+}
+
 .alert {
 	color: #333333;
 	border: 1px solid #333333;
