--- a/app/views/lists/show.html.haml
+++ b/app/views/lists/show.html.haml
@@ -11,8 +11,9 @@
           %ul.gray
             %li
               %span.gray Contributors: 
-              - @list.users.each do |user|
-                %span= link_to "#{user.first_name} #{user.last_name}, #{user.school}", user.link            
+              %ul
+                - @list.users.each do |user|
+                  %li= link_to "#{user.first_name} #{user.last_name}, #{user.school}", user.link            
             %li
               = "Published #{time_ago_in_words(@list.created_at)} ago"
             %li
