--- a/app/views/lists/show.html.haml
+++ b/app/views/lists/show.html.haml
@@ -13,7 +13,10 @@
               %span.gray Contributors: 
               %ul
                 - @list.users.each do |user|
-                  %li= link_to "#{user.first_name} #{user.last_name}, #{user.school}", user.link            
+                  %li.byline
+                    =link_to user.link do
+                      %span.profile-img= image_tag("#{user.first_name}_#{user.last_name}.jpg")
+                      %span.name= "#{user.first_name} #{user.last_name}, #{user.school}"      
             %li
               = "Published #{time_ago_in_words(@list.created_at)} ago"
             %li
