--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -198,10 +198,23 @@ a {
 }
 
 .profile-img {
+	z-index: -1;
 	img {
 	border-radius: 100%;
 	width: 50px;
 	height: 50px;
+	// margin-top: -10px;
+	// position: absolute;
+	}
+}
+
+.school-icon {
+	z-index: 10000;
+	img {
+		width: 25px;
+		position: absolute;
+		z-index: 10000;
+		// position: absolute;
 	}
 }
 
