--- a/app/views/static_pages/home.html.haml
+++ b/app/views/static_pages/home.html.haml
@@ -5,7 +5,7 @@
       %li
         %h1 Development Economics
       %li 
-        %h4.gray Frame your thinking around big development questions
+        %h4.gray Playlists of research papers around big questions in development economics
 
 
 %ul.topics
