--- a/app/views/lists/show.html.haml
+++ b/app/views/lists/show.html.haml
@@ -21,8 +21,8 @@
               = "Published #{time_ago_in_words(@list.created_at)} ago"
             %li
               = "Last updated #{time_ago_in_words(@list.updated_at)} ago"
-            %li
-              = "Viewed #{pluralize(@list.view_count, 'time')}"
+            / %li
+            /   = "Viewed #{pluralize(@list.view_count, 'time')}"
             %li.pt10.pb10.attention
               Want to contribute to this page, either by editing the summary or adding papers? Email 
               = mail_to "info@researchgps.com"
