Round out corners of lists on home

--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -72,6 +72,7 @@ a {
 		position: relative;
 		float: left;
 		margin-right: 15px;
+		border-radius: 3px;
 
 		.bg-img {
 			// background: linear-gradient( rgba(0, 0, 0, 0.4), rgba(0, 0, 0, 0.4) ), url('microfinance.png');
