Label list#description as 'state of the research'

--- a/app/views/lists/show.html.haml
+++ b/app/views/lists/show.html.haml
@@ -30,6 +30,8 @@
 
       .row.content
         .col-xs-12.description
+          %b State of the Research
+          %br
           = raw @list.description
         .col-xs-12.list-wrapper
           - if @items != []
