--- a/app/views/layouts/_header.html.haml
+++ b/app/views/layouts/_header.html.haml
@@ -6,6 +6,7 @@
           Research
           %span#globe GPS
     .text-right.slogan
+      info@researchgps.com
       The PhD-curated handbook for development economics
 
 
