--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -360,10 +360,13 @@ input[type=checkbox]
 
 .footer {
 	border-top: 1px solid #d3d3d3;
-	margin-top: 10px;
+	margin-top: 30px;
+	padding-left: 20px;
 	padding-top: 10px;
 	padding-bottom: 10px;
-	font-size: .9em;
+	// font-size: .9em;
+	padding-right: 30px;
+	text-align: right;
 }
 
 @media(min-width:768px) {
