--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -23,6 +23,10 @@
           - flash.each do |key, value|
             = content_tag(:div, value.to_s, class: "alert alert-#{key}")
           = yield
+        %footer.footer
+          %small
+            Want to get in touch? Email
+            =mail_to "info@researchgps.com"
     = debug(params) if Rails.env.development?
   / .footer 
   /   .container-fluid
