--- a/app/views/lists/index.html.haml
+++ b/app/views/lists/index.html.haml
@@ -1,6 +1,6 @@
 
 
-/ / .row.tag-list
+/ .row.tag-list
 /   .col-xs-12
 /     = form_tag lists_path, method: :get, class: "tag-form" do
 /       %ul
@@ -8,7 +8,7 @@
 /         %li
 /           = check_box_tag("tags[]", tag.id, @checked_tags[tag.id], class: "checkbox")
 /           %span= tag.name
-/     / # = submit_tag "Filter", class: "submit"
+    / # = submit_tag "Filter", class: "submit"
 
 .row.banner{style: "background-image: url(#{image_path @tag_image})"}
   .banner-info
