--- a/app/views/lists/index.html.haml
+++ b/app/views/lists/index.html.haml
@@ -6,9 +6,9 @@
 /       %ul
 /       - @tags.each do |tag|
 /         %li
-/           = check_box_tag("tags[]", tag.id, @checked_tags[tag.id], class: "checkbox")
+/ # = check_box_tag("tags[]", tag.id, @checked_tags[tag.id], class: "checkbox")
 /           %span= tag.name
-    / # = submit_tag "Filter", class: "submit"
+/ # = submit_tag "Filter", class: "submit"
 
 .row.banner{style: "background-image: url(#{image_path @tag_image})"}
   .banner-info
