Add 'Published Today' feed to the home page

--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -122,6 +122,16 @@ a {
 	}
 }
 
+.recently-published {
+	text-align: center;
+	h3 {
+		background: #fcf8e3; 
+		padding-top: 10px;
+		padding-bottom: 10px;
+	}
+	padding-top: 20px;
+}
+
 .list-show {
 	margin-left: 100px;
 	position: relative;
