Change Published Recently again so that it's about the last 24 hours

--- a/app/views/static_pages/home.html.haml
+++ b/app/views/static_pages/home.html.haml
@@ -21,7 +21,7 @@
 .row.feed
   .col-xs-12
     .recently-published 
-      %h3 Published Today
+      %h3 Published in the last 24 hours
     %ul
       = render @lists
 
