--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -150,6 +150,8 @@ a {
 	background: #c6e4ee;
 	padding-top: 20px;
 	padding-bottom: 20px;
+	padding-left: 10px;
+	padding-right: 10px;
 	// font-size: .9em;
 	margin-bottom: 10px;
 	a {
