Remove recently published for now

--- a/app/views/layouts/_header.html.haml
+++ b/app/views/layouts/_header.html.haml
@@ -6,6 +6,12 @@
           Research
           %span#globe GPS
     .text-right.slogan
-      The PhD-curated handbook for development economics
+      %ul
+        %li The PhD-curated handbook for development economics
+        / # %li= link_to "Create list", new_list_path
+
+
+
+
 
 
