--- a/app/views/lists/new.html.haml
+++ b/app/views/lists/new.html.haml
@@ -2,28 +2,10 @@
 %h1 New List
 
 = form_for(@list) do |f|
-  = f.label :title
-  = f.text_field :title
-  = f.label :published
-  = f.check_box :published
-  
-  = f.submit "Create list"
+  = render 'list_fields', f: f
 
 
-/ <%= f.label :name %>
-/ <%= f.text_field :name %>
 
-/ <%= f.label :email %>
-/ <%= f.text_field :email %>
-
-/ <%= f.label :password %>
-/ <%= f.password_field :password %>
-
-/ <%= f.label :password_confirmation, "Confirm Password" %>
-/ <%= f.password_field :password_confirmation %>
-
-/ <% provide(:title, 'Sign up') %>
-/ <h1>Sign up</h1>
 
 / <div class="row">
 /   <div class="span6 offset3">
