--- a/app/views/lists/_item_fields.html.haml
+++ b/app/views/lists/_item_fields.html.haml
@@ -1,20 +1,24 @@
 .add_new_item
   %li.item_title
     = f.label :title, "Title"
-    %br
     = f.text_field :title
 
   %li.item_url
     = f.label :url, "URL"
-    %br
     = f.text_field :url
 
   %li.item_abstract
     = f.label :abstract, "Abstract"
-    %br
     = f.text_area :abstract
 
   %li.item_author
     = f.label :author, "Author"
-    %br
     = f.text_field :author
+
+  %li.item_journal
+    = f.label :journal, "Journal"
+    = f.text_field :journal
+
+  %li.item_year
+    = f.label :year, "Year"
+    = f.text_field :year
