Add article ID on right sidebar for admin users

--- a/app/views/items/_item_content.html.haml
+++ b/app/views/items/_item_content.html.haml
@@ -1,6 +1,11 @@
 .title
   %h4= @item.title
 %br
+- if current_user.try(:admin?)
+  ID:
+  = @item.id
+%br
+%br
 = link_to @item.url do 
   %h6.read
     %span Read Now
