--- a/app/views/lists/show.html.haml
+++ b/app/views/lists/show.html.haml
@@ -7,7 +7,8 @@
           %h4= @list.title
           - if current_user.try(:admin?)
             = button_to "Edit", edit_list_path(@list), method: "get"
-
+          - if !(@list.published?)
+            %span#unpublished= "unpublished"
       .row.list-info
         .col-xs-12
           %ul.gray
