--- a/app/views/collections/index.html.haml
+++ b/app/views/collections/index.html.haml
@@ -10,6 +10,12 @@
 %ul.collections
   - @collections.each do |collection|
     %li
-      .bg-img{style: "background-image: url(#{image_path collection.image_url})"}
+      %div{:class => 'bg-img', :style => %(background-image:url(/assets/#{collection.image_url}))}
+
+      / style: "background-image: url(_#{image_path image_url}_)"}
       =link_to collection_path(collection) do
         %span= collection.name
+        %span.question-count= "#{pluralize(collection.lists.count, 'research question')}"
+
+
+/ %div{:class => 'styled_div', :style => %(background:url("#{resource.background.url(:medium)}") no-repeat center)}
