Add assets for collections

--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -144,6 +144,7 @@ span#unpublished {
 		position: relative;
 		float: left;
 		margin-right: 15px;
+		margin-bottom: 15px;
 		border-radius: 3px;
 
 		.bg-img {
